Adicionando autenticação no back e no front

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,10 @@
     <script src="bower_components/angular-messages/angular-messages.js"></script>
 
     <script src="app/controller/candidateController.js"></script>
+    <script src="app/controller/registerController.js"></script>
+    <script src="app/controller/loginController.js"></script>
+    <script src="app/service/LoginService.js"></script>
+    <script src="app/interceptor/AuthInterceptor.js"></script>
     <script src="app/app.js"></script>
     <script src="app/route.js"></script>
 </head>
